[project]
name = "hw-1"
version = "0.1.0"
description = "home work"
authors = [
    {name = "ViktorBond7",email = "141341341+ViktorBond7@users.noreply.github.com"}
]
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "colorama (>=0.4.6,<0.5.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "black (>=26.3.1,<27.0.0)"
]
